--- a/src/pages/sign-in/sign-in.template.hbs
+++ b/src/pages/sign-in/sign-in.template.hbs
@@ -1,4 +1,5 @@
-<div class="bg-indigo-900 min-h-screen">
+<div class="bg-indigo-900 min-h-screen relative">
+  <ui-loader loading="{{isLoading}}" class-name="z-1 bg-white/70"></ui-loader>
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto sm:h-screen lg:py-0">
     <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
