--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -1,9 +1,11 @@
+<ui-loader loading="{{isLoading}}" class-name="z-10 bg-white"></ui-loader>
 <div>
   <app-router>
     <app-route path="${props.routes.home}" title="Home Page" component="home-page"></app-route>
     <app-route path="${props.routes.signIn}" title="Sign In" component="sign-in-page"></app-route>
     <app-route path="${props.routes.signUp}" title="Sign Up" component="sign-up-page"></app-route>
     <app-route path="${props.routes.notFound}" title="404 | Not Found" component="not-found"></app-route>
+    <app-route path="${props.routes.userHome}" title="Lobby" component="user-home-page"></app-route>
     <app-outlet></app-outlet>
   </app-router>
 </div>
