--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -1,1 +1,22 @@
-HAIIII
+<div class="min-h-screen flex flex-col relative">
+  <ui-loader loading="{{isLoading}}" class-name="bg-white/70 z-10"></ui-loader>
+  <div class="gap-3">
+    <header class="flex h-24 border-2 items-center justify-between p-5 bg-violet-100">
+      <div class="user flex gap-3 items-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt="user"
+          class="user__img rounded-full w-14 h-14"/>
+        <a href="mailto:{{user.email}}" class="user__email">{{user.email}}</a>
+      </div>
+      <ui-button
+        caption="LogOut"
+        class-name="logout-btn mt-0 border text-small flex items-center w-full justify-center gap-2 hover:text-indigo-900">
+      </ui-button>
+    </header>
+
+    <main class="flex-1 pr-2">
+      <div class="routes flex flex-wrap mt-3 p-5 gap-4">
+        
+      </div>
+    </main>
+  </div>
+</div>
