--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -9,13 +9,15 @@
       </div>
       <ui-button
         caption="LogOut"
-        class-name="logout-btn mt-0 border text-small flex items-center w-full justify-center gap-2 hover:text-indigo-900">
+        class-name="logout-btn mt-0 hover:text-indigo-900">
       </ui-button>
     </header>
 
     <main class="flex-1 pr-2">
       <div class="routes flex flex-wrap mt-3 p-5 gap-4">
-        
+        <div class="routes__mood-track"></div>
+        <div class="routes__todo"></div>
+        <div class="routes__diary"></div>
       </div>
     </main>
   </div>
