--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -6,8 +6,10 @@
     <app-route path="${props.routes.signUp}" title="Sign Up" component="sign-up-page"></app-route>
     <app-route path="${props.routes.notFound}" title="404 | Not Found" component="not-found"></app-route>
     <app-route path="${props.routes.userHome}" title="Lobby" component="user-home-page"></app-route>
+    <app-route path="${props.routes.todo}" title="ToDo" component="todo-page"></app-route>
     <app-outlet></app-outlet>
   </app-router>
 </div>
 
 <ui-toast></ui-toast>
+<ui-modal></ui-modal>
