--- a/src/components/create-task-form/create-task-form.template.hbs
+++ b/src/components/create-task-form/create-task-form.template.hbs
@@ -8,4 +8,13 @@
     <p class="text-sm text-black">Description</p>
     <textarea name="description" class="p-2 w-full border rounded"></textarea>
   </label>
+
+  <label>
+    <p class="text-sm text-black">Task category</p>
+    <select name="category" class="p-2 w-full border rounded">
+      <option value="major">Major</option>
+      <option value="minor">Minor</option>
+      <option value="trivial">Trivial</option>
+    </select>
+  </label>
 </form>
