--- a/src/components/create-category-form/create-category-form.template.hbs
+++ b/src/components/create-category-form/create-category-form.template.hbs
@@ -3,4 +3,14 @@
     <p class="text-sm text-black">Title</p>
     <input type="text" name="title" class="p-2 w-full border rounded" />
   </label>
+
+  <label>
+    <p class="text-sm text-black">Select Color</p>
+    <select name="category-color" class="p-2 w-full border rounded">
+      {{#each colors}}
+      <option>
+        <div class="{{this.color}} w-4 h-4">{{this.color}}</div>
+      </option>
+      {{/each}}
+    </select>
 </form>
