--- a/src/components/task-card/task-card.template.hbs
+++ b/src/components/task-card/task-card.template.hbs
@@ -1,7 +1,10 @@
-<div class="border border-l-4 w-full p-2 rounded cursor-pointer">
+<div class="border {{{color}}} border-l-4 w-full p-2 mt-4 rounded cursor-pointer">
+  <div class="rounded-lg bg-slate-300">
   <h3 class="line-clamp-1">{{title}}</h3>
   <p class="line-clamp-3">{{description}}</p>
   <div class="flex gap-2">
-    <div class="{{category}}"></div>
+    <div class="{{category}}">{{category}}</div>
+  </div>
+
   </div>
 </div>
