--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -22,7 +22,7 @@
         {{#each categories}}
           <button
             data-type="{{this.title}}"
-            class="active category flex items-center justify-center text-lg h-16 w-full border border-lime-950 bg-purple-100">
+            class="{{this.category-color}} active category flex items-center justify-center text-lg h-16 w-full border border-lime-950">
             {{this.title}}
           </button>
         {{/each}}
@@ -35,9 +35,13 @@
         <i class="icon-badge-plus create-task"></i>
       </div>
       <div class="todo__tasks">
-        <div class="category-content todo__major major hidden"></div>
-        <div class="category-content todo__minor minor hidden"></div>
-        <div class="category-content todo__trivial trivial hidden"></div>
+        {{#each tasks}}
+          <ui-task-card 
+          title="{{this.title}}"
+          description="{{this.description}}"
+          category="{{this.category}}"
+          ></ui-task-card>
+        {{/each}}
       </div>
     </div>
   </div>
