--- a/src/components/task-card/task-card.template.hbs
+++ b/src/components/task-card/task-card.template.hbs
@@ -1,10 +1,12 @@
-<div class="border {{{color}}} border-l-4 w-full p-2 mt-4 rounded cursor-pointer">
-  <div class="rounded-lg bg-slate-300">
-  <h3 class="line-clamp-1">{{title}}</h3>
-  <p class="line-clamp-3">{{description}}</p>
-  <div class="flex gap-2">
-    <div class="{{category}}">{{category}}</div>
+<div class="border border-l-4 w-full p-2 mt-4 rounded min-h-24 flex items-center">
+  <input data-id="{{id}}" type="checkbox" class="h-6 w-6">
+  <div class="ml-3 w-full flex justify-between">
+    <div class="w-9/12">
+      <h3 class="line-clamp-1 text-lg">{{title}}</h3>
+      <p class="line-clamp-3">{{description}}</p>
+    </div>
+
+    <button data-id="{{id}}" class="delete-task-btn mr-3"><i class="icon-badge-x"></i></button>
   </div>
 
-  </div>
 </div>
