--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -12,37 +12,52 @@
     </nav>
   </div>
 
-  <div class="todo my-8 mx-auto px-4 md:px-12 lg:px-32 flex gap-4 grid grid-cols-2 grid-cols-layout">
-    <div class="todo__col bg-slate-50 border border-lime-950 min-w-[300px] p-4 flex flex-col gap-4 rounded-lg">
-      <div class="todo__col-name border-b-2 border-lime-950 p-4 flex items-center gap-4">
-        <h3 class="text-2xl">Categories</h1>
-        <i class="icon-badge-plus create-category"></i>
-      </div>
-      <div class="todo__categories space-y-4">
-        {{#each categories}}
-          <button
-            data-type="{{this.title}}"
-            class="{{this.category-color}} active category flex items-center justify-center text-lg h-16 w-full border border-lime-950">
-            {{this.title}}
-          </button>
-        {{/each}}
-      </div>
-    </div>
+  <div class="flex items-center justify-center">
+    <div class="todo flex gap-4 mt-8 grid grid-cols-2 grid-cols-layout ">
+      <div class="todo__col bg-slate-50 border border-lime-950 min-w-[300px] p-4 flex flex-col gap-4 rounded-lg h-[854px]">
+        <div class="todo__col-name border-b-2 border-lime-950 p-4 flex items-center gap-4">
+          <h3 class="text-2xl">Categories</h1>
+          <i class="icon-badge-plus create-category"></i>
+        </div>
+        <div class="todo__categories space-y-4">
+          {{#each categories}}
+            <div
+              class="{{this.category-color}} relative cursor-pointer rounded-md
+              category flex items-center justify-center text-lg h-16 w-full border border-lime-950">
+              <h2 class="text-2xl">{{this.title}}</h2>
 
-    <div class="todo__col bg-slate-50 min-w-[300px] md:min-w-[1000px] border border-lime-950 p-4 w-full rounded-lg">
-      <div class="todo__col-name border-b-2 border-lime-950 p-4 flex items-center gap-4">
-        <h3 class="text-2xl">ToDo</h1>
-        <i class="icon-badge-plus create-task"></i>
+              <i 
+              data-title="{{this.title}}"
+              data-id="{{this.id}}"
+              class="delete-btn icon-badge-x absolute right-2 top-1"></i>
+            </div>
+          {{/each}}
+        </div>
       </div>
-      <div class="todo__tasks">
-        {{#each tasks}}
-          <ui-task-card 
-          title="{{this.title}}"
-          description="{{this.description}}"
-          category="{{this.category}}"
-          ></ui-task-card>
-        {{/each}}
+
+      <div class="todo__col bg-slate-50 min-w-[300px] md:min-w-[1000px] border border-lime-950 p-4 w-full rounded-lg h-[854px] overflow-y-scroll ">
+        <div class="todo__col-name border-b-2 border-lime-950 p-4 flex items-center gap-4">
+          <h3 class="text-2xl">ToDo</h1>
+          <i class="icon-badge-plus create-task"></i>
+        </div>
+        <div class="todo__tasks ">
+          {{#each categories}}
+          <div class="mt-3 pl-3">
+            <h1 class="text-2xl mb-2">{{this.title}}</h1>
+            <div class="w-full h-1 rounded-lg {{this.category-color}}"></div>
+          </div>
+            {{#each tasks}}
+              <ui-task-card 
+              data-id="{{this.id}}"
+              title="{{this.title}}"
+              description="{{this.description}}"
+              category="{{this.category}}"
+              ></ui-task-card>
+            {{/each}}
+          {{/each}}
+        </div>
       </div>
     </div>
   </div>
+
 </div>
