--- a/src/components/modal/modal.template.hbs
+++ b/src/components/modal/modal.template.hbs
@@ -5,7 +5,7 @@
     <div class="relative bg-white rounded-lg shadow animate-fade-down animate-duration-500">
       <!-- Modal header -->
       <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
-        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+        <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">
           {{title}}
         </h3>
         <button type="button"
@@ -17,21 +17,21 @@
       <!-- Modal body -->
       <div class="p-4 md:p-5 space-y-4 modal-body max-h-[700px] overflow-auto">
         {{#if confirmation}}
-        <p>{{confirmation}}</p>
+        <p class="text-lg">{{confirmation}}</p>
         {{/if}}
       </div>
       <!-- Modal footer -->
       <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b">
         {{#if isError}}
         <button disabled="{{isError}}"
-          class="modal-success-trigger text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">{{successCaption}}</button>
+          class="modal-success-trigger text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center">{{successCaption}}</button>
         {{else}}
         <button
-          class="modal-success-trigger text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">{{successCaption}}</button>
+          class="modal-success-trigger text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center">{{successCaption}}</button>
         {{/if}}
 
         <button
-          class="modal-reject-trigger py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700">{{rejectCaption}}</button>
+          class="modal-reject-trigger py-2.5 px-5 ms-3 text-lg font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700">{{rejectCaption}}</button>
       </div>
     </div>
   </div>
