--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -48,6 +48,7 @@
           </div>
             {{#each tasks}}
               <ui-task-card 
+              is-completed="{{isCompleted}}"
               data-id="{{this.id}}"
               title="{{this.title}}"
               description="{{this.description}}"
