--- a/src/components/task-card/task-card.template.hbs
+++ b/src/components/task-card/task-card.template.hbs
@@ -1,6 +1,5 @@
 <div class="border border-slate-400 border-l-4 w-full p-2 mt-4 rounded min-h-24 flex items-center">
   <input 
-  data-id="{{id}}"
   type="checkbox"
   class="checkbox h-6 w-6"
   {{#if isCompleted}}
@@ -12,7 +11,7 @@
       <p class="line-clamp-3">{{description}}</p>
     </div>
 
-    <button data-id="{{id}}" class="delete-task-btn text-center w-10 h-10 mr-3 text-2xl"><i data-id="{{id}}" class="delete-task-btn icon-badge-x"></i></button>
+    <button class="delete-task-btn text-center w-10 h-10 mr-3 text-2xl"><i class="delete-task-btn icon-badge-x"></i></button>
   </div>
 
 </div>
