complete todo logic

--- a/src/components/create-category-form/create-category-form.template.hbs
+++ b/src/components/create-category-form/create-category-form.template.hbs
@@ -9,7 +9,7 @@
     <select name="categoryColor" class="p-2 w-full border rounded">
       {{#each colors}}
       <option>
-        <div>{{this.name}} <p class="hidden text-white">{{this.color}}</p></div>
+        <div>{{this.name}}</p></div>
       </option>
       {{/each}}
     </select>
