--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -7,6 +7,7 @@
     <app-route path="${props.routes.notFound}" title="404 | Not Found" component="not-found"></app-route>
     <app-route path="${props.routes.userHome}" title="Lobby" component="user-home-page"></app-route>
     <app-route path="${props.routes.todo}" title="ToDo" component="todo-page"></app-route>
+    <app-route path="${props.routes.moodTracker}" title="Mood Tracker" component="mood-tracker-page"></app-route>
     <app-outlet></app-outlet>
   </app-router>
 </div>
