--- a/src/components/button/button.template.hbs
+++ b/src/components/button/button.template.hbs
@@ -1,1 +1,1 @@
-<button class="{{className}} text-md p-2 rounded bg-indigo-500 text-white">{{caption}}</button>
+<button class="{{className}} border border-lime-950 hover:border-slate-600 p-2 rounded-lg">{{caption}}</button>
