--- a/src/components/create-task-form/create-task-form.template.hbs
+++ b/src/components/create-task-form/create-task-form.template.hbs
@@ -1,10 +1,16 @@
 <form class="create-task-form flex flex-col gap-3">
   <label class="w-full">
+    {{#if error.title}}
+    <p class="text-red-500">Error</p>
+    {{/if}}
     <p class="text-sm text-black">Title</p>
     <input type="text" name="title" class="p-2 w-full border rounded" />
   </label>
 
   <label class="w-full">
+    {{#if error.description}}
+    <p class="text-red-500">Error</p>
+    {{/if}}
     <p class="text-sm text-black">Description</p>
     <textarea name="description" class="p-2 w-full border rounded"></textarea>
   </label>
