--- a/src/components/modal/modal.template.hbs
+++ b/src/components/modal/modal.template.hbs
@@ -9,9 +9,9 @@
           {{title}}
         </h3>
         <button type="button"
-          class="modal-reject-trigger text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-lg w-8 h-8 ms-auto inline-flex justify-center items-center"
+          class="modal-reject-trigger text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-lg w-8 h-8 ms-auto inline-flex justify-center items-center text-lg"
           data-modal-hide="default-modal">
-          <div class="icon-circle-x"></div>
+          <div class="icon-badge-x"></div>
         </button>
       </div>
       <!-- Modal body -->
@@ -22,16 +22,11 @@
       </div>
       <!-- Modal footer -->
       <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b">
-        {{#if isError}}
-        <button disabled="{{isError}}"
-          class="modal-success-trigger text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center">{{successCaption}}</button>
-        {{else}}
         <button
-          class="modal-success-trigger text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center">{{successCaption}}</button>
-        {{/if}}
+          class="modal-success-trigger text-lime-950 bg-transparent border border-lime-950 hover:bg-slate-800 hover:text-white font-medium rounded-lg text-lg px-5 py-2.5 text-center">{{successCaption}}</button>
 
         <button
-          class="modal-reject-trigger py-2.5 px-5 ms-3 text-lg font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700">{{rejectCaption}}</button>
+          class="modal-reject-trigger py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500">{{rejectCaption}}</button>
       </div>
     </div>
   </div>
