--- a/src/pages/mood-tracker/mood-tracker.template.hbs
+++ b/src/pages/mood-tracker/mood-tracker.template.hbs
@@ -12,13 +12,12 @@
     </nav>
   </header>
 
-  <div class="container min-h-52 grid grid-rows-layout mx-auto my-12 bg-slate-100 rounded-lg p-12">
-    <div class="header flex items-center justify-center"><p class="text-xl py-5">How are you feeling today?</p></div>
+  <div class="container min-h-52 grid grid-rows-layout mx-auto my-12 bg-slate-100 rounded-2xl p-12">
+    <div class="header flex items-center justify-center bg-zinc-300 rounded-t-xl"><p class="text-2xl py-5">How are you feeling today?</p></div>
     <div class="body h-full flex items-center justify-center">
-      <t-one></t-one>
+      {{!-- templates --}}
     </div>
     <div class="footer flex gap-4 pt-5 border-t-2 border-lime-950">
-      <button class="next-btn text-lime-950 bg-transparent border border-lime-950 hover:bg-slate-800 hover:text-white font-medium rounded-lg text-lg px-5 py-2.5 text-center"><p>Next</p></button>
       <button class="go-back-btn py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500"><p>Go Back</p></button>
     </div>
   </div>
