routing through mood-page

--- a/src/components/mood-template-second/mood-template-second.template.hbs
+++ b/src/components/mood-template-second/mood-template-second.template.hbs
@@ -1,4 +1,4 @@
-<div class="template template-second flex flex-col gap-8 items-center hidden">
+<div class="template template-second flex flex-col gap-8 items-center">
   <p class="text-xl">Which emotion best describes you right now?</p>
   <form class="form-first min-w-[400px]">
     <input type="text" class="border border-stone-950 rounded-2xl min-h-16 w-full px-3" name="emotionDescription">
