--- a/src/components/mood-template-third/mood-template-third.template.hbs
+++ b/src/components/mood-template-third/mood-template-third.template.hbs
@@ -1,4 +1,4 @@
-<div class="template template-third flex flex-col gap-8 items-center hidden">
+<div class="template template-third flex flex-col gap-8 items-center">
   <p class="text-xl">Leave a memo about this emotion?</p>
   <form class="form-second min-w-[400px]">
     <input type="text" class="border border-stone-950 rounded-2xl min-h-16 w-full px-3" name="memoDescription">
