--- a/src/pages/mood-tracker/mood-tracker.template.hbs
+++ b/src/pages/mood-tracker/mood-tracker.template.hbs
@@ -16,6 +16,9 @@
     <div class="header flex items-center justify-center bg-zinc-300 rounded-t-xl"><p class="text-2xl py-5">How are you feeling today?</p></div>
     <div class="body h-full flex items-center justify-center">
       {{!-- templates --}}
+      <ui-choose-emoji-template class="tmp"></ui-choose-emoji-template>
+      {{!-- <ui-emotion-description-template></ui-emotion-description-template> --}}
+      {{!-- <ui-memo-description-template></ui-memo-description-template> --}}
     </div>
     <div class="footer flex gap-4 pt-5 border-t-2 border-lime-950">
       <button class="go-back-btn py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500"><p>Go Back</p></button>
