--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -13,7 +13,7 @@
   </header>
 
   <div class="flex items-center justify-center">
-    <div class="todo gap-4 mt-8 grid grid-cols-2 grid-cols-layout w-full md:px-4 lg:px-32 xl:px-60">
+    <div class="todo gap-4 mt-8 grid grid-cols-layout w-full md:px-4 lg:px-32 xl:px-60">
       <div class="todo__col bg-slate-50 border border-lime-950 md:w-[300px] p-4 flex flex-col gap-4 rounded-lg h-[854px] overflow-y-auto">
         <div class="todo__col-name text-2xl border-b-2 border-lime-950 p-4 flex items-center gap-4">
           <h3>Categories</h1>
