--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -8,6 +8,7 @@
     <app-route path="${props.routes.userHome}" title="Lobby" component="user-home-page"></app-route>
     <app-route path="${props.routes.todo}" title="ToDo" component="todo-page"></app-route>
     <app-route path="${props.routes.moodTracker}" title="Mood Tracker" component="mood-tracker-page"></app-route>
+    <app-route path="${props.routes.moodTrackerRecords}" title="Your Records" component="mood-tracker-records-page"></app-route>
     <app-outlet></app-outlet>
   </app-router>
 </div>
