--- a/src/components/mood-template-second/mood-template-second.template.hbs
+++ b/src/components/mood-template-second/mood-template-second.template.hbs
@@ -8,7 +8,7 @@
         <p>Done</p>
       </button>
       <button
-        class="next-btn w-full py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500">
+        class="skip-btn w-full py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500">
         <p>Skip</p>
       </button>
     </div>
