--- a/src/components/mood-template-third/mood-template-third.template.hbs
+++ b/src/components/mood-template-third/mood-template-third.template.hbs
@@ -5,11 +5,12 @@
     <div class="flex gap-4 mt-8 w-full">
       <button
         class="submit-second-form next-btn w-full text-lime-950 bg-transparent border border-lime-950 hover:bg-slate-800 hover:text-white font-medium rounded-lg text-lg px-5 py-2.5 text-center">
-        <p>Done</p>
+        <router-link href="${props.routes.moodTrackerRecords}" label="Done">
+        </router-link>
       </button>
       <button
         class="next-btn w-full py-2.5 px-5 ms-3 text-lg font-medium text-lime-950 bg-white rounded-lg border border-gray-200 hover:text-slate-500">
-        <p>Skip</p>
+        <router-link href="${props.routes.moodTrackerRecords}" label="Skip">
       </button>
     </div>
   </form>
