--- a/src/pages/todo/todo.template.hbs
+++ b/src/pages/todo/todo.template.hbs
@@ -8,7 +8,7 @@
 
     <nav class="flex items-center gap-8">
       <router-link href="${props.routes.moodTracker}" label="Mood Tracker" class="text-lime-950 text-xl"></router-link>
-      <router-link href="${props.routes.userHome}" label="Diary" class="text-lime-950 text-xl"></router-link>
+      <router-link href="${props.routes.moodTrackerRecords}" label="Your Records" class="text-lime-950 text-xl"></router-link>
     </nav>
   </header>
 
