--- a/src/pages/user-home/user-home.template.hbs
+++ b/src/pages/user-home/user-home.template.hbs
@@ -18,7 +18,7 @@
           <div class="routes__container border m-3 rounded-md flex items-center">
             <div class="">
               <router-link 
-              href="${props.routes.home}" 
+              href="${props.routes.moodTracker}" 
               label="Mood tracker" 
               class="text-5xl text-lime-950 p-12">
               </router-link>
@@ -40,8 +40,8 @@
           <div class="routes__container border m-3 rounded-md flex items-center">
             <div class="">
               <router-link 
-              href="${props.routes.home}" 
-              label="Diary" 
+              href="${props.routes.moodTrackerRecords}" 
+              label="Your Records" 
               class="text-5xl text-lime-950 p-12">
               </router-link>
             </div>
