--- a/src/pages/mood-tracker/mood-tracker.template.hbs
+++ b/src/pages/mood-tracker/mood-tracker.template.hbs
@@ -1,4 +1,4 @@
-  <ui-loader loading="{{isLoading}}"></ui-loader>
+  <ui-loader loading="{{isLoading}}" class="bg-white"></ui-loader>
 <div class="min-h-screen w-full bg-slate-800 grid grid-rows-layout">
   <header class="flex justify-between items-center h-24 py-5 px-24 bg-purple-100">
     <button class="super-btn border border-lime-950 p-2 rounded-lg text-xl hover:border-slate-400">
